# PlatformProjectCPP_Esimed

./: .cursorrules  CMakeLists.txt  SETUP.md  custom_levels.json
src/: main.cpp  tempCodeRunnerFile.cpp
src/core/: CustomLevelManager.cpp  CustomLevelManager.hpp  GameWindow.cpp  GameWindow.hpp  LevelProgress.cpp  LevelProgress.hpp  ResourceManager.cpp  ResourceManager.hpp  SkinManager.cpp  SkinManager.hpp
src/entities/: Coin.cpp  Coin.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  FlyingEnemy.cpp  FlyingEnemy.hpp  Player.cpp  Player.hpp
src/states/: EditorMenuState.cpp  EditorMenuState.hpp  GameState.cpp  GameState.hpp  LevelEditorState.cpp  LevelEditorState.hpp  LevelSelectionState.cpp  LevelSelectionState.hpp  MainMenuState.cpp  MainMenuState.hpp  SkinSelectionState.cpp  SkinSelectionState.hpp  State.hpp  StateManager.cpp  StateManager.hpp
src/ui/: UIButton.cpp  UIButton.hpp
src/world/: Tile.hpp  TileMap.cpp  TileMap.hpp  World.cpp  World.hpp  tempCodeRunnerFile.hpp
